<resources>
    <string name="app_name">WeddingProvider</string>
    <string name="map_api_key">AIzaSyAnjvMAJEmiAv3yeCDUXWv-PboXiT_uaoQ</string>
    <string name="search_key">AIzaSyAnjvMAJEmiAv3yeCDUXWv-PboXiT_uaoQ</string>
    <string name="wait">Wait</string>
    <string name="user_blocked">User Blocked</string>
    <string name="user_found">User Found</string>
    <string name="phone">Phone</string>
    <string name="login">Login</string>
    <string name="please_enter_code_sent_to">please enter code sent to</string>
    <string name="please_enter_the_verification_code_sent_to">Please enter the verification code sent to</string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="field_required">Field Required</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="sign_up">Signup</string>
    <string name="save">Save</string>
    <string name="provider_name">Provider Name</string>
    <string name="location">Location</string>
    <string name="k_m">K.M</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="contact_us">Contact Us</string>
    <string name="my_services">My Services</string>
    <string name="add_service">Add Service</string>
    <string name="scan_qr_code">Scan QR CODE</string>
    <string name="rate_app">Rate App</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="sorry">Sorry</string>
    <string name="no_notifications_to_show">No Notification</string>
    <string name="notifications">Notifications</string>
    <string name="inv_email">Invaild Email</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="subject">Subiect</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="suc">Success</string>
    <string name="service_name">Service Name</string>
    <string name="price">Price</string>
    <string name="department">Department</string>
    <string name="description">Description</string>
    <string name="basic_items">Basic Items</string>
    <string name="additions">Additions</string>
    <string name="maximum_reservation">Maximum number reservation (per day)</string>
    <string name="main_image">Main Image</string>
    <string name="video">Video</string>
    <string name="add_images">Add Images</string>
    <string name="max_ad_photo">maximum 5 photos</string>
    <string name="basic_item">Basic Item</string>
    <string name="enter_basic_item">Enter Basic Item</string>
    <string name="add">Add</string>
    <string name="plz_login_provider_phone">Please login with provider\'s phone number</string>
    <string name="search_for_location">Search for location...</string>
    <string name="reservations">Reservations</string>
    <string name="calender">Calender</string>
    <string name="no_reservation_to_show">No reservation to show</string>
    <string name="details">details</string>
    <string name="current">Current</string>
    <string name="prev">Previous</string>
    <string name="welcome_in_wedding">Welcome in Wedding</string>
    <string name="add_your_service_by_press_this_icon">Add your service by press this icon</string>
    <string name="no_reserv_on_day">No reservation on this day</string>
    <string name="cancel_reservation">Cancel reservation</string>
    <string name="update">Update</string>
    <string name="offer">Offer</string>
    <string name="title">Title</string>
    <string name="amount">Amount</string>
    <string name="ch_main_image">Choose main image</string>
    <string name="vid_req">Video required</string>
    <string name="sel_main_items">Select main items</string>
    <string name="vid_du_less">Video duration should be less than 90 seconds</string>
    <string name="choose_video">Choose video</string>
    <string name="ch_depart">Choose Department</string>
    <string name="upload_service_images">Upload Service Images</string>
    <string name="only_one_image">at least only one image</string>
    <string name="offer_name">Offer name</string>
    <string name="add_offer">Add offer</string>
    <string name="select_youtube_video_link">Select youtube video link...</string>
    <string name="enter_youtube_video_link">Enter youtube video link</string>
    <string name="ch_language">Change language</string>
    <string name="next">Next</string>
    <string name="tube_link_not_correct">Youtube video link is not correct</string>
    <string name="appointment">Appointment</string>
    <string name="inv_url">invalid url</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>

</resources>