<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.e_co.weddingprovider.model.AddOfferModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nestedscroll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:fillViewport="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:maxLines="2"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/main_image"
                        android:textAlignment="viewStart"
                        android:textColor="@color/gray2"
                        android:textSize="14sp" />

                    <FrameLayout
                        android:id="@+id/flUploadImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:background="@drawable/rounded_white_strock_gray4">

                        <com.makeramen.roundedimageview.RoundedImageView
                            android:id="@+id/image1"
                            android:layout_width="match_parent"
                            android:layout_height="180dp"
                            android:layout_margin="1dp"
                            android:clickable="false"
                            android:longClickable="false"
                            app:riv_border_color="@color/gray4"
                            app:riv_border_width="0dp" />

                        <ImageView
                            android:id="@+id/icon1"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:clickable="false"
                            android:longClickable="false"
                            android:padding="5dp"
                            android:src="@drawable/ic_upload" />
                    </FrameLayout>


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/offer_name"
                        android:textAlignment="viewStart"
                        android:textColor="@color/gray2"
                        android:textSize="14sp" />

                    <EditText
                        android:id="@+id/edtName"
                        error="@{model.error_name}"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/rounded_white_strock_gray4"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:singleLine="true"
                        android:text="@={model.name}"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/price"
                        android:textAlignment="viewStart"
                        android:textColor="@color/gray2"
                        android:textSize="14sp" />

                    <EditText
                        error="@{model.error_price}"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/rounded_white_strock_gray4"
                        android:inputType="numberDecimal"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:singleLine="true"
                        android:text="@={model.price}"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray7"
                        android:textSize="14sp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:maxLines="2"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:text="@string/description"
                        android:textAlignment="viewStart"
                        android:textColor="@color/gray2"
                        android:textSize="14sp" />

                    <EditText
                        error="@{model.error_description}"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/rounded_white_strock_gray4"
                        android:gravity="start"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:singleLine="true"
                        android:text="@={model.description}"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray7"
                        android:textSize="14sp"


                        />


                    <Button
                        android:id="@+id/btnSave"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center"

                        android:layout_margin="5dp"
                        android:background="@drawable/rounded_primary"
                        android:minWidth="100dp"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="@string/save"
                        android:textColor="@color/white"
                        android:textSize="15sp"

                        />
                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

            <net.cachapa.expandablelayout.ExpandableLayout
                android:id="@+id/expandLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:background="@color/trans_black"
                android:padding="16dp"
                android:visibility="gone"
                app:el_duration="800"
                app:el_expanded="false"
                app:el_parallax=".5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical">

                    <FrameLayout
                        android:id="@+id/flGallery"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@color/white"

                        >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:clickable="false"
                            android:longClickable="false"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:padding="12dp"
                                android:src="@drawable/ic_gallery"
                                app:tint="@color/colorPrimary" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="@string/gallery"
                                android:textColor="@color/colorPrimary"
                                android:textSize="16sp" />
                        </LinearLayout>
                    </FrameLayout>

                    <FrameLayout
                        android:id="@+id/flCamera"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/white"

                        >

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:clickable="false"
                            android:longClickable="false"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:padding="12dp"
                                android:src="@drawable/ic_camera"
                                app:tint="@color/colorPrimary" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:text="@string/camera"
                                android:textColor="@color/colorPrimary"
                                android:textSize="16sp" />
                        </LinearLayout>

                    </FrameLayout>

                    <Button
                        android:id="@+id/btnCancel"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="25dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/cancel"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </LinearLayout>


            </net.cachapa.expandablelayout.ExpandableLayout>

        </FrameLayout>

    </LinearLayout>

</layout>
